css/main.css
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: url('../fonts/Roboto.woff2') format('woff2');
}

* {
    font-family: Roboto, Calibri, Avenir, serif;
}

body {
    margin: 0;
}

button {
    background-color: #EEEEEE;
    border: none;
    outline: none;
    cursor: pointer;
    margin-bottom: 10px;
}

button:focus {
    outline: none;
}

button:hover {
    background-color: #E0E0E0;
}


hr {
    background: #d0d0d0;
    border: 0;
    height: 1px;
    margin-top: 0;
    margin-bottom: 12px;
}

.header {
    font-size: 12px;
    width: 100%;
    background-color: #424242;
    line-height: 20px;
    color: lightgrey;
    text-align: center;
    vertical-align: middle;
}

.wrapper {
    min-width: 250px;
    max-width: 250px;
    margin: 1em auto;
    padding: 0 10px;
}

.btn-tab {
    padding: 0;
    width: 100%;
}

.tab-title {
    font-size: 15px;
    margin-left: 10px;
    line-height: 30px;
    vertical-align: middle;
    width: 100%;
}

.btn-mute {
    padding: 8px 0;
    width: 48%;
    font-size: 14px;
    margin-bottom: 0;
}

.btn-mute:last-child {
    float: right;
}

